[fix #1366] Add backface-visibility and transform: translate3d without prefix

--- a/src/scss/_core.scss
+++ b/src/scss/_core.scss
@@ -28,6 +28,7 @@
 		overflow: hidden;
 		/* fix for flashing background */
 		-webkit-transform: translate3d(0px, 0px, 0px);
+		transform: translate3d(0px, 0px, 0px);
 	}
 
 	.owl-item {
@@ -35,6 +36,7 @@
 		min-height: 1px;
 		float: left;
 		-webkit-backface-visibility: hidden;
+		backface-visibility: hidden;
 		-webkit-tap-highlight-color: transparent;
 		-webkit-touch-callout: none;
 	}
